# slavov_corp

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  report.html
base/: models.py
cargo/: models.py  views.py
cargo/migrations/: 0001_initial.py  0002_remove_cargo_internal_identifier_alter_cargo_id.py  0003_alter_cargo_id.py
cargo_app/: admin.py  apps.py  models.py  urls.py  views.py
cargo_app/migrations/: 0001_initial.py
docker/: backend.Dockerfile  http_server.Dockerfile
docker/backend/: entrypoint.sh
docker/nginx/: nginx.conf
docker/nginx/sites-enabled/: crosschain.rubic.exchange.conf
docker/nginx/templates/no_ssl/: crosschain.exchange.conf.template
docker/nginx/templates/ssl/: crosschain.rubic.exchange.conf.template
nginx/: Dockerfile  nginx.conf
slavov_backend/: asgi.py  gunicorn.py  settings.py  urls.py
slavov_backend/base/: models.py
slavov_backend/cargo/: models.py
slavov_backend/slavov_backend/: settings.py  urls.py  wsgi.py
static/: report.css
templates/cargo_app/: report.html
